Fix the profile username gap in mobile

--- a/src/styles/pages/_profile.sass
+++ b/src/styles/pages/_profile.sass
@@ -41,6 +41,8 @@
             flex-direction: row
             align-items: center
             gap: 30px
+            @media (max-width: 768px)
+                gap: 10px
             .avatar-name
                 font-size: 18px
                 font-weight: 300
